[Change] Optimized Code